# lightweight-db-engine

./: README.md
lightweight-db-engine/: .gitignore  README.md  pyproject.toml
lightweight-db-engine/data/: generate_test_data.py
lightweight-db-engine/experiments/: columnar_vs_row_benchmark.py  hash_index_benchmark.py
lightweight-db-engine/src/columnar_storage/: benchmark.py  columnar_reader.py  columnar_writer.py
lightweight-db-engine/src/natural_language/: llm_client.py  prompt_builder.py  test_cases.py
lightweight-db-engine/src/query_engine/: cli.py  executor.py  index.py  parser.py  tokenizer.py
lightweight-db-engine/tests/: test_query_engine.py
